--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -95,23 +95,28 @@
     <Compile Include="Model\File\ListingFlags.cs" />
     <Compile Include="Model\Builder\EmailRequestBuilder.cs" />
     <Compile Include="Model\Builder\IEmailRequestBuilder.cs" />
-    <Compile Include="Model\System\AppGroupRequest.cs" />
-    <Compile Include="Model\System\AppGroupResponse.cs" />
-    <Compile Include="Model\System\AppRequest.cs" />
-    <Compile Include="Model\System\EmailTemplateRequest.cs" />
-    <Compile Include="Model\System\EmailTemplateResponse.cs" />
-    <Compile Include="Model\System\RelatedApp.cs" />
-    <Compile Include="Model\System\AppResponse.cs" />
-    <Compile Include="Model\System\RelatedAppGroup.cs" />
-    <Compile Include="Model\System\RoleRequest.cs" />
-    <Compile Include="Model\System\ServiceRequest.cs" />
-    <Compile Include="Model\System\ServiceResponse.cs" />
-    <Compile Include="Model\System\UserRequest.cs" />
-    <Compile Include="Model\System\UserResponse.cs" />
-    <Compile Include="Model\System\RoleResponse.cs" />
-    <Compile Include="Model\System\RelatedRole.cs" />
-    <Compile Include="Model\System\RelatedService.cs" />
-    <Compile Include="Model\System\RelatedUser.cs" />
+    <Compile Include="Model\System\AppGroup\AppGroupRequest.cs" />
+    <Compile Include="Model\System\AppGroup\AppGroupResponse.cs" />
+    <Compile Include="Model\System\App\AppRequest.cs" />
+    <Compile Include="Model\System\Email\EmailTemplateRequest.cs" />
+    <Compile Include="Model\System\Email\EmailTemplateResponse.cs" />
+    <Compile Include="Model\System\Environment\EnvironmentResponse.cs" />
+    <Compile Include="Model\System\Environment\PhpInfoSection.cs" />
+    <Compile Include="Model\System\Environment\PlatformSection.cs" />
+    <Compile Include="Model\System\Environment\ReleaseSection.cs" />
+    <Compile Include="Model\System\Environment\ServerSection.cs" />
+    <Compile Include="Model\System\App\RelatedApp.cs" />
+    <Compile Include="Model\System\App\AppResponse.cs" />
+    <Compile Include="Model\System\AppGroup\RelatedAppGroup.cs" />
+    <Compile Include="Model\System\Role\RoleRequest.cs" />
+    <Compile Include="Model\System\Service\ServiceRequest.cs" />
+    <Compile Include="Model\System\Service\ServiceResponse.cs" />
+    <Compile Include="Model\System\User\UserRequest.cs" />
+    <Compile Include="Model\System\User\UserResponse.cs" />
+    <Compile Include="Model\System\Role\RoleResponse.cs" />
+    <Compile Include="Model\System\Role\RelatedRole.cs" />
+    <Compile Include="Model\System\Service\RelatedService.cs" />
+    <Compile Include="Model\System\User\RelatedUser.cs" />
     <Compile Include="Model\User\DeviceRequest.cs" />
     <Compile Include="Model\User\DeviceResponse.cs" />
     <Compile Include="Model\Email\EmailAddress.cs" />
