--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Api\Implementation\FilesApi.cs" />
     <Compile Include="Api\IDatabaseApi.cs" />
     <Compile Include="Api\IEmailApi.cs" />
+    <Compile Include="Api\Implementation\SystemApi.Script.cs" />
     <Compile Include="Api\Implementation\SystemApi.Delete.cs" />
     <Compile Include="Api\Implementation\SystemApi.Update.cs" />
     <Compile Include="Api\Implementation\SystemApi.Create.cs" />
@@ -118,6 +119,7 @@
     <Compile Include="Model\System\Provider\ProviderRequest.cs" />
     <Compile Include="Model\System\Provider\ProviderResponse.cs" />
     <Compile Include="Model\System\Role\RoleRequest.cs" />
+    <Compile Include="Model\System\Script\ScriptOutput.cs" />
     <Compile Include="Model\System\Script\ScriptResponse.cs" />
     <Compile Include="Model\System\Service\ServiceRequest.cs" />
     <Compile Include="Model\System\Service\ServiceResponse.cs" />
