Dedicated CustomSettings API

--- a/DreamFactory.Tests/DreamFactory.Tests.csproj
+++ b/DreamFactory.Tests/DreamFactory.Tests.csproj
@@ -77,6 +77,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Api\CustomSettingsApiTests.cs" />
     <Compile Include="Api\DatabaseApiTests.cs" />
     <Compile Include="Api\EmailApiTests.cs" />
     <Compile Include="Api\FilesApiTests.cs" />
