--- a/DreamFactory.Demo/DreamFactory.Demo.csproj
+++ b/DreamFactory.Demo/DreamFactory.Demo.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>DreamFactory.Demo.IntegrationTest.Test</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -65,6 +68,8 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="FilesDemo.cs" />
     <Compile Include="HttpDemo.cs" />
+    <Compile Include="IntegrationTest\SystemUserTest.cs" />
+    <Compile Include="IntegrationTest\Test.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DiscoveryDemo.cs" />
