--- a/DreamFactory.Demo/DreamFactory.Demo.csproj
+++ b/DreamFactory.Demo/DreamFactory.Demo.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="FilesDemo.cs" />
     <Compile Include="HttpDemo.cs" />
+    <Compile Include="IntegrationTest\DevicesTest.cs" />
     <Compile Include="IntegrationTest\SystemRoleTest.cs" />
     <Compile Include="IntegrationTest\SystemUserTest.cs" />
     <Compile Include="IntegrationTest\Test.cs" />
