Autotest for /system/event

--- a/DreamFactory.Demo/DreamFactory.Demo.csproj
+++ b/DreamFactory.Demo/DreamFactory.Demo.csproj
@@ -69,6 +69,7 @@
     <Compile Include="FilesDemo.cs" />
     <Compile Include="HttpDemo.cs" />
     <Compile Include="IntegrationTest\DevicesTest.cs" />
+    <Compile Include="IntegrationTest\SystemEventTest.cs" />
     <Compile Include="IntegrationTest\SystemRoleTest.cs" />
     <Compile Include="IntegrationTest\SystemScriptTest.cs" />
     <Compile Include="IntegrationTest\SystemUserTest.cs" />
