--- a/DreamFactory.Demo/DreamFactory.Demo.csproj
+++ b/DreamFactory.Demo/DreamFactory.Demo.csproj
@@ -37,7 +37,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>DreamFactory.Demo.IntegrationTest.Test</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -63,23 +64,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DatabaseDemo.cs" />
-    <Compile Include="EmailDemo.cs" />
+    <Compile Include="Demo\DatabaseDemo.cs" />
+    <Compile Include="Demo\EmailDemo.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="FilesDemo.cs" />
-    <Compile Include="HttpDemo.cs" />
-    <Compile Include="IntegrationTest\SystemDeviceTest.cs" />
-    <Compile Include="IntegrationTest\SystemEventTest.cs" />
-    <Compile Include="IntegrationTest\SystemRoleTest.cs" />
-    <Compile Include="IntegrationTest\SystemScriptTest.cs" />
-    <Compile Include="IntegrationTest\SystemUserTest.cs" />
-    <Compile Include="IntegrationTest\Test.cs" />
+    <Compile Include="Demo\FilesDemo.cs" />
+    <Compile Include="Demo\HttpDemo.cs" />
+    <Compile Include="Test\SystemDeviceTest.cs" />
+    <Compile Include="Test\SystemEventTest.cs" />
+    <Compile Include="Test\SystemRoleTest.cs" />
+    <Compile Include="Test\SystemScriptTest.cs" />
+    <Compile Include="Test\SystemUserTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DiscoveryDemo.cs" />
-    <Compile Include="CustomSettingsDemo.cs" />
-    <Compile Include="SystemDemo.cs" />
-    <Compile Include="UserDemo.cs" />
+    <Compile Include="Demo\DiscoveryDemo.cs" />
+    <Compile Include="Demo\CustomSettingsDemo.cs" />
+    <Compile Include="Demo\SystemDemo.cs" />
+    <Compile Include="Demo\UserDemo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
