Added snake case property name resolver tests.

--- a/DreamFactory.Tests/DreamFactory.Tests.csproj
+++ b/DreamFactory.Tests/DreamFactory.Tests.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Rest\RestContextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rest\ServiceFactoryTests.cs" />
+    <Compile Include="Serialization\SnakeCasePropertyNameResolverTests.cs" />
     <Compile Include="Serialization\JsonContentSerializerTests.cs" />
     <Compile Include="TestDataHttpFacade.cs" />
   </ItemGroup>
