--- a/DreamFactory.Tests/DreamFactory.Tests.csproj
+++ b/DreamFactory.Tests/DreamFactory.Tests.csproj
@@ -184,70 +184,55 @@
     <None Include="TestData\rest\email\post.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\delete.json">
+    <None Include="TestData\rest\files\calendar\delete.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\get.json">
+    <None Include="TestData\rest\files\calendar\get.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\post.json">
+    <None Include="TestData\rest\files\calendar\post.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.bin\get.json">
+    <None Include="TestData\rest\files\calendar\test.bin\get.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.bin\post.json">
+    <None Include="TestData\rest\files\calendar\test.bin\post.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.bin\put.request.json">
+    <None Include="TestData\rest\files\calendar\test.bin\post.request.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.bin\post.request.json">
+    <None Include="TestData\rest\files\calendar\test.bin\put.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.bin\put.json">
+    <None Include="TestData\rest\files\calendar\test.bin\put.request.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.txt\get.json">
+    <None Include="TestData\rest\files\calendar\test.txt\get.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.txt\delete.json">
+    <None Include="TestData\rest\files\calendar\test.txt\delete.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.txt\patch.json">
+    <None Include="TestData\rest\files\calendar\test.txt\patch.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.txt\put.json">
+    <None Include="TestData\rest\files\calendar\test.txt\put.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.txt\put.request.json">
+    <None Include="TestData\rest\files\calendar\test.txt\put.request.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.txt\patch.request.json">
+    <None Include="TestData\rest\files\calendar\test.txt\patch.request.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.txt\post.request.json">
+    <None Include="TestData\rest\files\calendar\test.txt\post.request.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\files\applications\calendar\test.txt\post.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\rest\files\applications\delete.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\rest\files\applications\get.json">
+    <None Include="TestData\rest\files\calendar\test.txt\post.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="TestData\rest\files\get.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\rest\files\delete.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\rest\files\post.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\rest\files\post.request.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="TestData\rest\get.json">
