--- a/DreamFactory.Tests/DreamFactory.Tests.csproj
+++ b/DreamFactory.Tests/DreamFactory.Tests.csproj
@@ -298,10 +298,10 @@
     <None Include="TestData\rest\user\custom\get.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\user\custom\preferences\delete.json">
+    <None Include="TestData\rest\user\custom\Language\delete.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\user\custom\preferences\get.json">
+    <None Include="TestData\rest\user\custom\Language\get.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="TestData\rest\user\device\post.request.json">
