--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -113,6 +113,8 @@
     <Compile Include="Model\System\Config\ConfigResponse.cs" />
     <Compile Include="Model\System\Config\HostInfo.cs" />
     <Compile Include="Model\System\Config\StateInfo.cs" />
+    <Compile Include="Model\System\Custom\CustomRequest.cs" />
+    <Compile Include="Model\System\Custom\CustomResponse.cs" />
     <Compile Include="Model\System\Device\DeviceResponse.cs" />
     <Compile Include="Model\System\Email\EmailTemplateRequest.cs" />
     <Compile Include="Model\System\Email\EmailTemplateResponse.cs" />
