Upgraded SystemEvents and Logout demo. Fixed tests

--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -77,8 +77,8 @@
     <Compile Include="Api\Implementation\CustomSettingsApi.cs" />
     <Compile Include="Api\Implementation\HttpAddressExtensions.cs" />
     <Compile Include="Api\Implementation\SystemApi.Admin.cs" />
+    <Compile Include="Api\Implementation\SystemApi.Single.cs" />
     <Compile Include="Api\Implementation\SystemApi.Event.cs" />
-    <Compile Include="Api\Implementation\SystemApi.Script.cs" />
     <Compile Include="Api\Implementation\SystemApi.Delete.cs" />
     <Compile Include="Api\Implementation\SystemApi.Update.cs" />
     <Compile Include="Api\Implementation\SystemApi.Create.cs" />
@@ -127,18 +127,15 @@
     <Compile Include="Model\System\App\RelatedApp.cs" />
     <Compile Include="Model\System\App\AppResponse.cs" />
     <Compile Include="Model\System\AppGroup\RelatedAppGroup.cs" />
-    <Compile Include="Model\System\Event\EventCacheResponse.cs" />
-    <Compile Include="Model\System\Event\EventPaths.cs" />
-    <Compile Include="Model\System\Event\EventResponse.cs" />
-    <Compile Include="Model\System\Event\EventRequest.cs" />
-    <Compile Include="Model\System\Event\EventVerbs.cs" />
+    <Compile Include="Model\System\Event\EventScriptResponse.cs" />
+    <Compile Include="Model\System\Event\EventScriptRequest.cs" />
     <Compile Include="Model\System\Event\RelatedEventSubscriber.cs" />
     <Compile Include="Model\System\Lookup\RelatedLookup.cs" />
     <Compile Include="Model\System\RoleServiceAccess\RelatedRoleServiceAccess.cs" />
     <Compile Include="Model\System\Role\RoleRequest.cs" />
     <Compile Include="Model\System\Script\RelatedScriptType.cs" />
     <Compile Include="Model\System\Event\RelatedEventScript.cs" />
-    <Compile Include="Model\System\Script\ScriptResponse.cs" />
+    <Compile Include="Model\System\Script\ScriptTypeResponse.cs" />
     <Compile Include="Model\System\Service\RelatedServiceType.cs" />
     <Compile Include="Model\System\Service\ServiceRequest.cs" />
     <Compile Include="Model\System\Service\ServiceResponse.cs" />
