--- a/DreamFactory.Tests/DreamFactory.Tests.csproj
+++ b/DreamFactory.Tests/DreamFactory.Tests.csproj
@@ -304,6 +304,21 @@
     <None Include="TestData\rest\system\user\get.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="TestData\rest\user\custom\Language\patch.request.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TestData\rest\user\custom\Language\patch.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TestData\rest\user\custom\delete.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TestData\rest\user\custom\patch.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TestData\rest\user\custom\patch.request.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="TestData\rest\user\custom\post.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
