Updated local host uri to azure hosted instance of dream factory v2.

--- a/DreamFactory.AddressBok/DreamFactory.AddressBook.csproj
+++ b/DreamFactory.AddressBok/DreamFactory.AddressBook.csproj
@@ -149,6 +149,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="App_Package\add_dotnet.dfpkg" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
