--- a/DreamFactory.AddressBok/packages.config
+++ b/DreamFactory.AddressBok/packages.config
@@ -15,5 +15,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="SimpleInjector" version="3.0.5" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web" version="3.0.5" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="3.0.5" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
